# ttt-wg

./: .travis.yml  README.md  setup.cfg  tox.ini
ttt/: Dockerfile  docker-compose.yml  play_dev_game.sh  requirements.txt
ttt/config/: routing.py  settings.py  urls.py
ttt/config/settings/: local.py  secure_example.py  test.py
ttt/envs/: pg.env
ttt/game/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
ttt/game/migrations/: 0001_initial.py
ttt/game/static/game/css/: game.css
ttt/game/static/game/js/: enter.js  game.js
ttt/game/templates/game/: base.html  desk.html  index.html
ttt/game/tests/: test_views.py
ttt/templates/registration/: logged_out.html  login.html
