[metadata]
name = Tic-Tac-Toe
summary = Tweet Parser
license = Apache-2.0
description-file =
    README.md
requires-python = >=3.6
classifier =
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: JavaScript
    Programming Language :: HTML


[files]
packages =
    ttt
